# SentrixSync

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: run_sync_benchmark.py  sync_benchmark_report.md  sync_benchmark_results.json
configs/: reference.yaml
configs/devices/: ego_cam.descriptor.yaml  glove_L.descriptor.yaml
configs/scenarios/: clean.yaml  dual_device_offset.yaml
docs/: ARCHITECTURE.md  CONTRACT.md  IMPLEMENTATION_NOTES.md  REAL_DEVICE_INTEGRATION_GUIDE.md  REFERENCE_CLOCK_DECISION.md  SESSION_SCHEMA.md  SUBFRAME_BUCKETING.md  SYNTHETIC_ACCURACY_BUDGET.md  USER_GUIDE.md
src/sentrixsync/: __init__.py  config.py  lifecycle.py  manifest.py  persist.py
src/sentrixsync/clock/: __init__.py  estimate.py  forward.py
src/sentrixsync/core/: __init__.py  device.py  events.py  session.py  timeline.py  types.py  uri.py
src/sentrixsync/detect/: __init__.py  corrupt.py  detector.py  matcher.py
src/sentrixsync/ingest/: __init__.py  adapter.py  batch.py  pipeline.py  sentrixsim_adapter.py
tests/: conftest.py  test_adapter.py  test_associate.py  test_batch.py  test_clock_estimate.py  test_clock_forward.py  test_confidence_decay.py  test_config.py  test_corrupt.py  test_detect.py  test_device.py  test_engine.py  test_events.py  test_graph.py  test_join.py  test_lifecycle.py  test_manifest.py  test_metrics.py  test_multimodal.py  test_persist.py  test_pipeline.py  test_robustness.py  test_scenarios.py  test_sentrixsim_adapter.py  test_session.py  test_sync_timeline.py  test_timeline.py  test_types.py  test_uri.py
(+14 files in other folders)
