[project]
name = "sentrixsync"
version = "0.3.0"
description = "Standalone multi-device synchronization and timeline framework for the Sentrix ecosystem (core contracts + foundations; no synchronization algorithms yet)."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
parquet = [
    "pyarrow>=14",
]
dev = [
    "pytest>=8.0",
    "pyarrow>=14",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
filterwarnings = ["default"]
